--- a/Login.html
+++ b/Login.html
@@ -11,7 +11,7 @@
         <div class="header-content">
             <h1>LevelUp News</h1>
             <div class="header-buttons">
-                <a href="Index.html" class="button">Inicio</a>
+                <a href="index.html" class="button">Inicio</a>
                 <a href="Registro.html" class="button">Registrarse</a>
             </div>
         </div>
